
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "amplify>=0.11.2",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.3",
    "matplotlib>=3.7.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.scripts]
solve = "python3 src/main.py"