
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "amplify>=0.11.2",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.3",
    "matplotlib>=3.7.2",
    "dimod>=0.12.10",
    "dwave-system>=1.20.0",
    "setuptools>=68.0.0",
    "numpy>=1.25.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.scripts]
solve = "python3 src/main.py"